feat: support nixos & darwin

--- a/.github/workflows/test-systems.yaml
+++ b/.github/workflows/test-systems.yaml
@@ -2,19 +2,18 @@ name: Test Supported Systems
 
 on:
   push:
-    branches: [ main ]
     paths:
       - 'flake.nix'
       - 'flake.lock'
       - '**/*.nix'
-      - '.github/workflows/test.yml'
+      - '.github/workflows/**'
   pull_request:
     branches: [ main ]
     paths:
       - 'flake.nix'
       - 'flake.lock'
       - '**/*.nix'
-      - '.github/workflows/test.yml'
+      - '.github/workflows/**'
 
 jobs:
   build-and-test:
@@ -41,25 +40,13 @@ jobs:
       - name: Install Nix
         uses: nixbuild/nix-quick-install-action@v30
 
-      - name: Setup Cache
+      - name: Cache Nix store
         uses: nix-community/cache-nix-action@v6
         with:
           primary-key: nix-${{ matrix.system }}-${{ hashFiles('flake.lock', '**/*.nix') }}
-
-          restore-prefixes-first-match: |
-            nix-${{ matrix.system }}-
-            nix-${{ runner.os }}-
-
-          restore-prefixes-all-matches: |
-            nix-common-
-
+          restore-prefixes-first-match: nix-${{ matrix.system }}-
           gc-max-store-size-linux: 3G
           gc-max-store-size-macos: 3G
-
-          purge: true
-          purge-prefixes: nix-${{ matrix.system }}-
-          purge-created: 604800  # 1 week
-          purge-primary-key: never
 
       - name: Test Package
         run: |
@@ -74,9 +61,9 @@ jobs:
 
       - name: Test home-manager module
         run: |
-          echo "Test: ${{ matrix.system }} home-manager"
-          nix build ./tests#homeConfigurations.test-${{ matrix.system }}.activationPackage --no-link -L
-          hm_path=$(nix path-info ./tests#homeConfigurations.test-${{ matrix.system }}.activationPackage)
+          echo "Test: ${{ matrix.system }} home-manager module"
+          nix build ./tests/home#homeConfigurations.test-${{ matrix.system }}.activationPackage --no-link -L
+          hm_path=$(nix path-info ./tests/home#homeConfigurations.test-${{ matrix.system }}.activationPackage)
 
           if [ -f "${hm_path}/home-path/bin/hyper-mcp" ]; then
             echo "PASS: Wrapped hyper-mcp binary found at ${hm_path}/home-path/bin/hyper-mcp"
@@ -85,4 +72,36 @@ jobs:
             exit 1
           fi
 
-          echo "PASS: ${{ matrix.system }} home-manager"
+          echo "PASS: ${{ matrix.system }} home-manager module"
+
+      - name: Test nixos module
+        if: matrix.system != 'aarch64-darwin'
+        run: |
+          echo "Test: ${{ matrix.system }} nixos module"
+          nix build ./tests/nixos#nixosConfigurations.test-${{ matrix.system }}.config.system.build.toplevel --no-link -L
+          nixos_path=$(nix path-info ./tests/nixos#nixosConfigurations.test-${{ matrix.system }}.config.system.build.toplevel)
+
+          if [ -f "${nixos_path}/sw/bin/hyper-mcp" ]; then
+            echo "PASS: nixos wrapped hyper-mcp binary found at ${nixos_path}/sw/bin/hyper-mcp"
+          else
+            echo >&2 "ERROR: No wrapped hyper-mcp binary found in nixos system packages"
+            exit 1
+          fi
+
+          echo "PASS: ${{ matrix.system }} nixos module"
+
+      - name: Test darwin module
+        if: matrix.system == 'aarch64-darwin'
+        run: |
+          echo "Test: ${{ matrix.system }} darwin module"
+          nix build ./tests/darwin#darwinConfigurations.test-${{ matrix.system }}.config.system.build.toplevel --no-link -L
+          darwin_path=$(nix path-info ./tests/darwin#darwinConfigurations.test-${{ matrix.system }}.config.system.build.toplevel)
+
+          if [ -f "${darwin_path}/sw/bin/hyper-mcp" ]; then
+            echo "PASS: darwin wrapped hyper-mcp binary found at ${darwin_path}/sw/bin/hyper-mcp"
+          else
+            echo >&2 "ERROR: No wrapped hyper-mcp binary found in darwin system packages"
+            exit 1
+          fi
+
+          echo "PASS: ${{ matrix.system }} darwin module"
